# master-thesis

./: .gitignore  .gitmodules  README.md  dataset.org  literature.org  requirements  requirements.in
doc/: .gitignore  bibliography.bib  main.tex  settings.tex
doc/chapters/: acquisition.tex  analysis.tex  cameras.tex  conclusion.tex  dataset.tex  dvs.tex  features.tex  introduction.tex  labeling.tex  methods.tex  preprocessing.tex  related-work.tex  results.tex  training.tex
doc/figures/: .gitignore
doc/figures/dataset/: noise.csv
doc/figures/dvs/: hand.csv  plot_events3d.py
doc/figures/introduction/: build_gray_frames.py
doc/figures/results/: accuracy.py  confusion_matrix.py  label_error_rate.py  loss.py
doc/pages/: abstract.tex  acknowledgements.tex  disclaimer.tex
jaerrec/: .gitignore  CMakeLists.txt
jaerrec/src/: App.cpp  App.h  ConnectDialog.cpp  ConnectDialog.h  MainFrame.cpp  MainFrame.h  main.cpp
labeler/: .gitignore  CMakeLists.txt
labeler/src/: App.cpp  App.h  DAVISWindow.cpp  DAVISWindow.h  MainFrame.cpp  MainFrame.h  PlayTimer.cpp  PlayTimer.h  Stream.h  main.cpp
neural/: build_dataset.py  cm.py  cm_events.py  nn.py  plot_cm.py  preprocess_events.py  train_events.py
notebooks/: autoencoder.ipynb  classifications.ipynb  confusion-matrix.ipynb  data  densities.ipynb  distances.ipynb  levenshtein.ipynb  methods.ipynb  preprocessing.ipynb  presentation.ipynb  segmentation.ipynb  stats.ipynb
pipeline/: apply_autoencoder.py  apply_ctc_classifier.py  apply_gru_classifier.py  apply_hmm_decoder.py  apply_hmm_segmenter.py  apply_mixture_encoder.py  build_ctc_dataset.py  build_dataset.py  compute_cnn_features.py  confusion_matrix.py  label_data.py  plot_classifications.py  plot_states.py  preprocess_events.py  reconstruct_frames.py  runner.py  train_autoencoder.py  train_ctc_classifier.py  train_gru_classifier.py  train_hmm_decoder.py  train_hmm_segmenter.py  train_mixture_encoder.py  update_attrs.py
preprocessing/: apply_mixture_encoder.py  build_autoencoder_dataset.py  preprocess_events.py  train_bin_encoder.py  train_mixture_encoder.py
presentation/: .gitignore  main.tex  notes.org
presentation/figures/: .gitignore  confusion-data.json  confusion_matrix.py
recorder/: .gitignore  CMakeLists.txt  README.md  test.webm
recorder/Edvs/: Event.hpp  EventIO.cpp  EventIO.hpp  EventStream.cpp  EventStream.hpp  edvs.c  edvs.h  edvs_impl.h  event.h
recorder/src/: App.cpp  App.h  main.cpp
recorder/src/agents/: DVSAgent.cpp  DVSAgent.h  OpenCVAgent.cpp  OpenCVAgent.h  TimestampFile.cpp  TimestampFile.h
recorder/src/capture/: DVSCapture.cpp  DVSCapture.h  OpenCVCapture.cpp  OpenCVCapture.h
recorder/src/gui/: Controller.cpp  Controller.h  DVSDisplay.cpp  DVSDisplay.h  DVSFrame.cpp  DVSFrame.h  Feedback.cpp  Feedback.h  Instructor.cpp  Instructor.h  OpenCVDisplay.cpp  OpenCVDisplay.h  OpenCVFrame.cpp  OpenCVFrame.h  ReplayFrame.cpp  ReplayFrame.h  Setup.cpp  Setup.h
recorder/src/store/: AedatStorage.cpp  AedatStorage.h  VideoStorage.cpp  VideoStorage.h
utils/: acc_abs_frames.py  acc_gray_frames.py  aedat.py  aer.py  aerv1.py  aerv2.py  compute_flow_field.m  flow_field.m  frame_labels.py  generate_csv.py  gesture_schedule.py  keep_best_and_last.py  record-gestures.py  split_aedat.py
